Aula 15 - Refatoração final para Curso
Remoção da Classe Curso do projeto de teste e recriação no projeto de Domínio

--- a/test/CursoOnline.Dominio.Test/CursoOnline.Dominio.Test.csproj
+++ b/test/CursoOnline.Dominio.Test/CursoOnline.Dominio.Test.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="ExpectedObjects" Version="2.3.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\CursoOnline.Dominio\CursoOnline.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
