--- a/test/CursoOnline.Dominio.Test/CursoOnline.Dominio.Test.csproj
+++ b/test/CursoOnline.Dominio.Test/CursoOnline.Dominio.Test.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\..\src\CursoOnline.Dominio\CursoOnline.Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Alunos\" />
+    <Folder Include="Matriculas\" />
+    <Folder Include="PublicoAlvo\" />
+  </ItemGroup>
+
 </Project>
