--- a/src/CursoOnline.Web/CursoOnline.Web.csproj
+++ b/src/CursoOnline.Web/CursoOnline.Web.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Filters\" />
-    <Folder Include="Models\" />
-    <Folder Include="View\" />
-    <Folder Include="Util\" />
-    <Folder Include="wwwroot\" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <ProjectReference Include="..\CursoOnline.Dominio\CursoOnline.Dominio.csproj" />
+    <ProjectReference Include="..\CursoOnline.Ioc\CursoOnline.Ioc.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +19,12 @@
     </Content>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="bundleconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="Views\Curso\Index.cshtml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
