--- a/src/CursoOnline.Web/appsettings.json
+++ b/src/CursoOnline.Web/appsettings.json
@@ -4,5 +4,6 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "ConnectionString": "Data Source=BG13749\\MSSQLDEV;Database=CursoOnline;Trusted_Connection=true;"
 }
