--- a/src/CursoOnline.Web/appsettings.Development.json
+++ b/src/CursoOnline.Web/appsettings.Development.json
@@ -6,5 +6,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "ConnectionString": "Data Source=(LOCALDB)\\MSSQLLocalDB;Database=CursoOnline;Trusted_Connection=true;"
 }
