--- a/src/CursoOnline.Dominio/CursoOnline.Dominio.csproj
+++ b/src/CursoOnline.Dominio/CursoOnline.Dominio.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Matriculas\" />
+    <Folder Include="Domain\" />
   </ItemGroup>
 
 </Project>
